# LinuxServiceManager

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  servicemanager.cpp  servicemanager.h
